docs/book/samples/appa/paren_ascription_check.out
error[formatting]: a single-type ascription is written tight: `w:type` (parenthesized guards return with typesets)
  --> paren_ascription_check.kso:1:11
   1 | fn area (w: int)
                 ^
