docs/book/samples/appa/paren_ascription_check.kso
fn area (w: int)
  w * w

pub play = print "{area 3}"
